# sokolov

./: README.md  pyproject.toml
prompts/: A.txt  B.txt  context_agnostic.txt  context_ondemand.txt  context_permalink.txt  system_message.txt
sokolov/: anthropic_assets.py  argparse_assets.py  excel_assets.py  main.py  openai_assets.py  openrouter_assets.py  shagohod.py
tests/: test_sokolov.py
