[tool.poetry]
name = "sokolov"
version = "0.1.0"
description = "An LLM-experimenting suite, including data migration, cleanup, and checking features"
authors = ["Smogshaik <github@smog.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
