[tool.poetry]
name = "sokolov"
version = "0.1.0"
description = "An LLM-experimenting suite, including data migration, cleanup, and checking features"
authors = ["Smogshaik <github@smog.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
num2words = "^0.5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
