[tool.poetry]
name = "sokolov"
version = "0.1.0"
description = "An LLM-experimenting suite, including data migration, cleanup, and checking features"
authors = ["Smogshaik <github@smog.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openpyxl = "^3.1.2"
num2words = "^0.5.12"
requests = "^2.31.0"
transformers = "^4.34.0"
tiktoken = "^0.5.1"
pytest = "^7.4.3"
spacy = "^3.7.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
openai = "^1.102.0"
anthropic = "^0.39.0"
pandas = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
